--- a/style.css
+++ b/style.css
@@ -14,6 +14,34 @@ h1 {
   padding: 20px;
   border: 1px solid pink;
 }
+.wind {
+  background-color: #000;
+  color: #fff;
+  opacity: 0.5;
+  width: 150px;
+  height: 150px;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 25px;
+  padding-left: 5px;
+  display: inline-block;
+}
+.temp {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  width: 150px;
+  height: 150px;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 25px;
+  padding-right: 5px;
+  float: right;
+}
+.wrapper {
+  padding: 2rem 2rem;
+  text-align: center;
+}
+
 #details {
   text-align: center;
   display: block;
