--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,22 @@ h1 {
   padding-left: 5px;
   display: inline-block;
 }
+.Weather .search-input {
+  background: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  color: rgba(39, 33, 66, 0.4);
+  display: inline-block;
+  font-size: 16px;
+  height: 50px;
+  line-height: 20px;
+  padding: 15px 20px;
+}
+.Weather form {
+  border-bottom: 1px solid #f9f7fe;
+  margin-top: 40px;
+  padding-bottom: 30px;
+}
 .temp {
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
