--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ img {
 }
 
 #details {
-  text-align: center;
   display: block;
   list-style: none;
   margin: 0;
@@ -47,5 +46,6 @@ img {
 }
 #temperature {
   font-size: 34px;
-  font-weight: 50;
+  text-align: center;
+  font-weight: bold;
 }
