--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  background-color: rgb(250, 241, 242);
+}
 h1 {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
@@ -43,9 +46,11 @@ img {
   margin: 0;
   padding: 0;
   text-transform: capitalize;
+  color: grey;
 }
 #temperature {
   font-size: 34px;
   text-align: center;
   font-weight: bold;
+  color: grey;
 }
