--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: rgb(250, 241, 242);
+  font-family: "EB Garamond", serif;
+  font-family: "Playpen Sans", cursive;
 }
 h1 {
   display: block;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
   font-weight: 100;
   height: 27px;
